--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@x402/evm": "^2.3.1",
     "@x402/fetch": "^2.3.0",
     "lucide-react": "^0.564.0",
+    "openai": "^6.21.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-markdown": "^10.1.0",
