--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chat",
   "private": true,
-  "version": "0.2.0",
+  "version": "0.3.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -19,6 +19,7 @@
     "@tanstack/react-query": "^5.90.21",
     "@x402/evm": "^2.3.1",
     "@x402/fetch": "^2.3.0",
+    "assistant-stream": "^0.3.2",
     "lucide-react": "^0.564.0",
     "openai": "^6.21.0",
     "react": "^19.2.0",
