--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "@rainbow-me/rainbowkit": "^2.2.10",
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-query": "^5.90.21",
+    "@walletconnect/ethereum-provider": "^2.23.5",
     "@x402/evm": "^2.3.1",
     "@x402/fetch": "^2.3.0",
     "assistant-stream": "^0.3.2",
     "lucide-react": "^0.564.0",
-    "openai": "^6.21.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "openai": "^6.22.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-shiki": "^0.9.1",
     "remark-gfm": "^4.0.1",
     "tailwindcss": "^4.1.18",
@@ -31,18 +32,18 @@
     "wagmi": "^3.4.3"
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.1",
-    "@types/node": "^24.10.1",
-    "@types/react": "^19.2.7",
+    "@eslint/js": "^9.39.2",
+    "@types/node": "^24.10.13",
+    "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
-    "@vitejs/plugin-react": "^5.1.1",
-    "eslint": "^9.39.1",
+    "@vitejs/plugin-react": "^5.1.4",
+    "eslint": "^9.39.2",
     "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-react-refresh": "^0.4.24",
+    "eslint-plugin-react-refresh": "^0.4.26",
     "globals": "^16.5.0",
     "typescript": "~5.9.3",
-    "prettier": "^3.5.3",
-    "typescript-eslint": "^8.48.0",
+    "prettier": "^3.8.1",
+    "typescript-eslint": "^8.55.0",
     "vite": "^7.3.1"
   }
 }
